--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "practice"
+name = "c2rat"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 machine-uid = "0.3.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+whoami = "1.4.0"
 
 [profile.release]
 strip = true
