--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 machine-uid = "0.3.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+serde_json = "1.0.97"
 whoami = "1.4.0"
 
 [profile.release]
