--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
     "dev": "nodemon ./src/app.ts"
   },
   "dependencies": {
+    "@prisma/client": "4.16.0",
     "express": "^4.18.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1"
+    "@types/node": "^20.3.1",
+    "prisma": "^4.16.0"
   }
 }
