--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ machine-uid = "0.3.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 screenshots = "0.6.0"
 serde_json = "1.0.97"
+sqlite = "0.31.0"
 whoami = "1.4.0"
 winapi = { version = "0.3.9", features = ["winuser", "dpapi"] }
 
